2006-04-18  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #330674
	* calendar/e-cal-backend-exchange-calendar.c:
	(receive_objects): Passed ECalComponentId for notifying
	clients on objects removed.

2006-04-18  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #334900
	* calendar/e-cal-backend-exchange-calendar.c: (receive_objects):
	Do not remove the instance as exception would be set in the method
	modify_object.
	* calendar/e-cal-backend-exchange.c:
	(e_cal_backend_exchange_modify_object):Set the exception alone instead
	of removing the instance.

2006-04-10  Sushma Rai  <rsushma@novell.com>

	* configure.in: Bumped Version to 2.6.1 
	* NEWS: Updated NEWS. 

2006-04-10  Sushma Rai  <rsushma@novell.com>

	* docs/reference/gtk-doc.make: Creating the target docs directory
	only if the source directory is not empty. Fixes #334925.
	Patch submitted by "Jeremy Messenger <mezz@FreeBSD.org>"

2006-04-04  Sushma Rai  <rsushma@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (create_object): 
	Initialize variables location and ru_header to NULL.
		
	* mail/mail-stub-exchange.c (append_message): Similar.
	Fixes #334391.

2006-03-30  Rhys Jones  <rhys@sucs.org>

	* configure.in: Added Welsh (cy) to ALL_LINGUAS.

2006-03-22  Tommi Vainikainen  <thv@iki.fi>

	* configure.in (ALL_LINGUAS): Added Dzongkha (dz).

2006-03-13  Sushma Rai  <rsushma@novell.com>

	* configure.in: Bumped Version to 2.6.0 
	* NEWS: Updated NEWS. 

2006-03-06  Sushma Rai  <rsushma@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c 
	(check_owner_partstatus_for_declined): Check for NULL ical property.
	Fixes #323990.

2006-03-06  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #333603.
	* calendar/e-cal-backend-exchange.c:
	(set_mode): Notify the client to authenticate only when
	the mode is changed from offline to online.

2006-03-06  Sushma Rai  <rsushma@novell.com>

	* po/POTFILES.in : Removed the non existing files. 